--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ff38f5</color>
     <color name="colorPrimaryDark">#002884</color>
-    <color name="colorAccent">#fafbff</color>
+    <color name="colorAccent">#c5000000</color>
 </resources>
