--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff38f5</color>
+    <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#002884</color>
-    <color name="colorAccent">#c5000000</color>
+    <color name="colorAccent">#b04af4</color>
 </resources>
